# featurium

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: featurium.example.toml  featurium.example.yaml
docs/: CONFIGURATION.md
examples/: 01_basic_factory_usage.py
featurium/: __init__.py  config.py  factory.py  feature_store.py
featurium/core/: models.py  uow.py
featurium/feature_store/: __init__.py  feature_store.py  protocols.py  schemas.py
featurium/services/: __init__.py  base_retrieval.py  feature_retrieval.py  feature_retrival.py  feature_retrival_ibis.py  retrieval.py
featurium/services/registration/: __init__.py  registration.py
featurium/services/retrieval/: base_retrieval.py  retrieval.py  retrieval_ibis.py
featurium/services/retrival/: retrieval.py
tests/: conftest.py  test_feature_store.py
tests/core/: test_models.py
tests/integration_tests/: db_validator.py  test_attr_retrival_success.py  test_feature_store_complete.py  utils.py
tests/integration_tests/registration/: __init__.py  test_complete_workflow.py
tests/services/: test_feature_retrieval.py
tests/unit_tests/: test_factory.py
tests/unit_tests/core/: test_models.py
tests/unit_tests/feature_store/: __init__.py  test_feature_store_query.py  test_feature_store_registration.py  test_feature_store_retrieval.py  test_schemas.py
tests/unit_tests/registration/: test_registration.py
tests/unit_tests/retrieval/: test_retrieval.py
tests/utils/: factories.py
